cabal-version:
  2.0
name:
  ch-hs-format
build-type:
  Simple
version:
  1.0.0

executable ch-hs-format
  build-depends:
    base ^>= 4.13,
    containers,
    ghc,
    ghc-exactprint,
    optparse-applicative
  main-is:
    Main.hs
  other-modules:
    CircuitHub.HsFormat
    CircuitHub.HsFormat.ModuleDeclaration
    CircuitHub.HsFormat.ModulePragmas
    CircuitHub.HsFormat.TopLevelDeclarations
  hs-source-dirs:
    src
  ghc-options:
    -Wall
